# neuralnet-cpp

./: .clang-tidy  .gitignore  .gitmodules  README.md  compile_flags.txt  meson.build
.github/workflows/: ci.yml
include/neuralnet/: network.hpp
include/neuralnet/concepts/: connectable_layers.hpp  layer.hpp
include/neuralnet/layer/: input_layer.hpp
include/neuralnet/type_traits/: connect_layers.hpp  remove_input_layer.hpp
test/: meson.build
test/ut/: meson.build  network.cc
test/ut/concepts/: connectable_layers.cc  layer.cc
test/ut/layer/: input_layer.cc
test/ut/type_traits/: connect_layers.cc  remove_input_layer.cc
